# bbtag

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
bluetag/: __init__.py  ble.py  cli.py  image.py  screens.py  text.py  transfer.py  usage_claude.py  usage_codex.py  usage_layout_2_9.py  usage_layout_3_7.py  usage_layout_common.py
docs/superpowers/plans/: 2026-04-03-usage-loop-flicker.md  2026-04-03-usage-loop.md  2026-04-07-layer-partial-refresh.md  2026-04-22-usage-layout-split-by-screen.md
docs/superpowers/specs/: 2026-04-03-usage-loop-design.md  2026-04-03-usage-loop-flicker-design.md  2026-04-07-layer-partial-refresh-design.md  2026-04-22-usage-layout-split-by-screen-design.md
examples/: push_codex_usage.py  push_codex_usage_3.7.py
tests/: test_ble.py  test_cli_loop.py  test_cli_scan.py  test_example_push_codex_usage.py  test_image.py  test_packaging.py  test_screens.py  test_transfer.py  test_usage_claude.py  test_usage_codex.py
